// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line-chart-widget-form Renders \`line-chart-widget-form\` widget settings with custom props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    value="Map widget"
  />
  <field-periodic-refresh-stub
    value="[object Object]"
  />
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      value="[object Object]"
      withcolor="true"
      withexternal="true"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-chart-title-stub
      name="parameters.chart_title"
      value="Chart title"
    />
    <field-quick-date-interval-type-stub
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <field-filters-stub
      addable="true"
      editable="true"
      filters="[object Object]"
      hideselector="true"
      withentity="true"
    />
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</div>
`;

exports[`line-chart-widget-form Renders \`line-chart-widget-form\` widget settings with default props 1`] = `
<div
  class="layout column"
>
  <field-title-stub
    value=""
  />
  <!---->
  <widget-settings-group-stub
    title="Metrics display"
  >
    <field-alarm-metric-presets-stub
      value=""
      withcolor="true"
      withexternal="true"
    />
  </widget-settings-group-stub>
  <widget-settings-group-stub
    title="Advanced settings"
  >
    <field-chart-title-stub
      name="parameters.chart_title"
      value=""
    />
    <field-quick-date-interval-type-stub
      value="last30Days"
    />
    <field-sampling-stub
      value="day"
    />
    <!---->
    <field-switcher-stub
      title="Show comparison"
    />
  </widget-settings-group-stub>
</div>
`;
